--- a/HomeService/HomeService.csproj
+++ b/HomeService/HomeService.csproj
@@ -7,6 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Saeid\**" />
+    <Compile Remove="Services\**" />
+    <Content Remove="Saeid\**" />
+    <Content Remove="Services\**" />
+    <EmbeddedResource Remove="Saeid\**" />
+    <EmbeddedResource Remove="Services\**" />
+    <None Remove="Saeid\**" />
+    <None Remove="Services\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5">
       <PrivateAssets>all</PrivateAssets>
@@ -17,11 +28,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Services\" />
-    <Folder Include="Saeid\" />
   </ItemGroup>
 
 </Project>
