--- a/HomeService/appsettings.json
+++ b/HomeService/appsettings.json
@@ -9,4 +9,6 @@
 }
 
 
-//Scaffold-DbContext "Data Source=.;Initial Catalog=db_HomeService;Integrated Security=True;TrustServerCertificate=True;" Microsoft.EntityFrameworkCore.SqlServer -OutputDir Saeid -f
+//Scaffold-DbContext "Data Source=.;Initial Catalog=KarKhoonehDb;Integrated Security=True;TrustServerCertificate=True;" Microsoft.EntityFrameworkCore.SqlServer -OutputDir Saeid -f
+
+ // Scaffold-DbContext "Server=desktop-vd5sscb;Initial Catalog=databaseName;Integrated Security=True" Microsoft.EntityFrameworkCore.SqlServer -OutputDir Models -f
